--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -1,30 +1,41 @@
 process FP420Test  = {
-	service = MessageLogger
-	{
-      	untracked vstring destinations = {"warning.txt","error.txt","info.txt","debugmessages.txt"}
+ # include services
+ #include "Configuration/ReleaseValidation/data/Services.cfi"
 
-      	vstring categories = {  "FP420Sim" }
-	vstring debugModules = { "*" }
-	PSet error.txt         = {string threshold = "ERROR"  }
-	PSet warning.txt       = {string threshold = "WARNING"}
-	PSet info.txt          = {string threshold = "INFO"  }
-      	PSet debugmessages.txt = {string threshold = "DEBUG"
-				PSet INFO     = { int32 limit = 0 }
-				PSet DEBUG    = { int32 limit = 0 }
-				PSet FP420Sim = { int32 limit = 1000000 }
-				}
-   	}
+  # initialize  MessageLogger
+  include "FWCore/MessageLogger/data/MessageLogger.cfi"
 
-	service = RandomNumberGeneratorService
-	{
-      	untracked uint32 sourceSeed = 135799753
-      	PSet moduleSeeds =
-      		{
-        	 untracked uint32 VtxSmeared = 123456789
-      		}
-   	}
+#	service = MessageLogger
+#	{
+#      	untracked vstring destinations = {"warning.txt","error.txt","info.txt","debugmessages.txt"}
+#
+#      	vstring categories = {  "FP420Sim" }
+#	vstring debugModules = { "*" }
+#	PSet error.txt         = {string threshold = "ERROR"  }
+#	PSet warning.txt       = {string threshold = "WARNING"}
+#	PSet info.txt          = {string threshold = "INFO"  }
+#      	PSet debugmessages.txt = {string threshold = "DEBUG"
+#				PSet INFO     = { int32 limit = 0 }
+#				PSet DEBUG    = { int32 limit = 0 }
+#				PSet FP420Sim = { int32 limit = 1000000 }
+#				}
+#   	}
+
+        service = RandomNumberGeneratorService
+        {
+        untracked uint32 sourceSeed = 135799753
+        PSet moduleSeeds =
+                {
+                 untracked uint32 VtxSmeared = 123456789
+                 untracked uint32 SimG4Object = 9876
+                }
+        }
+
+
+        include "SimGeneral/HepPDTESSource/data/pdt.cfi"
+
 	source = FlatRandomEGunSource { 
-		untracked int32 maxEvents = 10
+		untracked int32 maxEvents = 1
 		untracked PSet PGunParameters = {
 			untracked vint32 PartID = {2212} 
 			untracked double MinEta = 9.67
@@ -34,109 +45,78 @@ process FP420Test  = {
 			untracked double MinE   = 7000.
 			untracked double MaxE   = 7000.
 		}
-		untracked int32 Verbosity = 0 # set to 1 (or greater)  for printouts
+		untracked int32 Verbosity = 1 # set to 1 (or greater)  for printouts
 	}
+
+
 	module VtxSmeared = VertexGenerator 
 	{
 		string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
-		double MeanX = -22.    // in mm 
-		double MeanY = 0.      // in mm  
-		double MeanZ = -2000.  // in mm
-		double SigmaX = 0.015
-		double SigmaY = 0.015
-		double SigmaZ = 10.0  // in mm (as in COBRA/OSCAR)
+		double MeanX = -2.2    // in cm 
+		double MeanY = 0.      // in cm  
+		double MeanZ = -200.0  // in cm
+		double SigmaX = 0.0015
+		double SigmaY = 0.0015
+		double SigmaZ = 1.0  // in cm (as in COBRA/OSCAR)
 	}
+
+#	module VtxSmeared = VertexGenerator 
+#	{
+#		string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
+#		double MeanX = -22.    // in mm 
+#		double MeanY = 0.      // in mm  
+#		double MeanZ = -2000.  // in mm
+#		double SigmaX = 0.015
+#		double SigmaY = 0.015
+#		double SigmaZ = 10.0  // in mm (as in COBRA/OSCAR)
+#	}
+#
+#  module VtxSmeared = VertexGenerator
+#   {
+#      string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
+#      double MeanX = 0.
+#      double MeanY = 0.
+#      double MeanZ = 0.
+#      double SigmaX = 0.0015
+#      double SigmaY = 0.0015
+#      double SigmaZ = 5.3  // in cm (as in COBRA/OSCAR)
+#   }
+#
+#
+# Seeds start
+        # Vtx Smearing
+       # include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
+
+#  include "SimG4Core/Application/data/SimG4Object.cfi"
+
+# Initialize magnetic field and XML
 	#Geometry
         include "SimG4CMS/FP420/test/data/FP420GeometryXML.cfi"
+#include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
 
 	#Magnetic Field
 	include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
-
-        module o1 = PoolOutputModule {untracked string fileName ="simfp420event.root"} 
-        module SimG4Object = OscarProducer { 
-		bool NonBeamEvent = false
-		untracked int32 RunNumber = 1001
-		#
-		untracked int32 G4EventManagerVerbosity = 0
-		untracked int32 G4StackManagerVerbosity = 0
-		#
-		bool UseMagneticField = false
-		bool OverrideUserStackingAction = true
-		bool StoreRndmSeeds = false
-		bool RestoreRndmSeeds = false
-		#
-		# not sure if it should be (un)tracked ?
-		#
-		string PhysicsTablesDirectory = "PhysicsTables"
-		bool StorePhysicsTables = false
-		bool RestorePhysicsTables = false
-		PSet MagneticField = {
-                        double delta = 1.
-		}
-		PSet Physics = {
-			string type = "SimG4Core/Physics/QGSP"
-			bool DummyEMPhysics = true
-			bool CutsPerRegion = true
-			double DefaultCutValue = 10.
-			untracked int32 Verbosity = 0                     
-		}
-		PSet Generator = {
-		     bool ApplyPtCuts = true
-		     bool ApplyEtaCuts = true
-		     bool ApplyPhiCuts = true
-		     double MinPhiCut = 0.
-		     double MaxPhiCut = 360.
-		     double MinEtaCut = 9.65
-		     double MaxEtaCut = 10.50
-		     double MinPtCut = 1.
-		     double MaxPtCut = 999999.
-		     untracked string InputFileName = "Internal"
-		     untracked int32 Verbosity = 0
-	        }
-		PSet RunAction = { string StopFile = "StopRun" }
-		PSet EventAction = {
-		     bool CollapsePrimaryVertices = false
-		     string StopFile = "StopRun"
-		     untracked bool debug = false
-		}
-		PSet TrackingAction = { untracked bool DetailedTiming = false }
-		PSet UtilityActions =
-		{
-			string type = "SimG4Core/UtilityAction/TrackingVerboseAction"
-			untracked bool  DEBUG = false
-			untracked bool  CheckForHighEtPhotons = false
-			untracked int32 EventMin = 0
-			untracked int32 EventMax = 0
-			untracked int32 EventStep = 1
-			untracked int32 TrackMin = 0
-			untracked int32 TrackMax = 0
-			untracked int32 TrackStep = 1
-			untracked int32 VerboseLevel = 0
-		}
-		PSet SteppingAction = {
-		     bool   KillBeamPipe = true
-		     double CriticalEnergyForVacuum = 2.0
-		     double CriticalDensity = 1.e-25
-		     untracked int32  Verbosity = 0
-		}
-		PSet CaloTrkProcessing = {
-		     bool   TestBeam  = false
-		     double EminTrack = 0.01
-		}		     
-		PSet FP420SD =	{
-		     untracked int32  Verbosity = 0
-		}
-		VPSet Watchers = {
-		{	string type            = "FP420Test"
-			PSet FP420Test = 
-			{
-				vstring Names         = {"FP420SI"}
-#				string  FileName      = "FP420Test.root"
-			}
-		}}
-
-	}
-	path p1 = { VtxSmeared, SimG4Object }
+# Seeds end
+#
+#
+#
+        module o1 = PoolOutputModule {untracked string fileName ="simevent.root"} 
+        include "SimG4Core/Application/data/g4SimHits.cfi"
+        replace g4SimHits.UseMagneticField = false
+        replace g4SimHits.Physics.DefaultCutValue = 10.
+        replace g4SimHits.Generator.MinEtaCut =  9.5
+        replace g4SimHits.Generator.MaxEtaCut =  10.5
+        replace g4SimHits.Watchers = {
+                        { string type            = "FP420Test"
+                        PSet FP420Test =
+                        {
+                                int32 verbosity     = 0
+                                string FDataLabel =  "defaultData"
+                                string FOutputFile = "TheAnlysis.root"
+                                string FRecreateFile = "RECREATE"
+                        }}
+        }
+	path p1 = { VtxSmeared, g4SimHits }
 	endpath outpath = { o1 }
 
 	service = Timing {}
