--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -1,9 +1,15 @@
 process FP420Test  = {
- # include services
- #include "Configuration/ReleaseValidation/data/Services.cfi"
-
-  # initialize  MessageLogger
+ ####### include services
+### include "Configuration/ReleaseValidation/data/Services.cfi"
+  ########## initialize  MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
+#        service = MessageLogger
+#        { 
+#	        untracked vstring destinations = {"cout"}
+#		PSet cout = { PSet default = { int32 limit = 0 }}
+#
+#        }
+
 
 #	service = MessageLogger
 #	{
@@ -27,94 +33,89 @@ process FP420Test  = {
         PSet moduleSeeds =
                 {
                  untracked uint32 VtxSmeared = 123456789
-                 untracked uint32 SimG4Object = 9876
+                 untracked uint32 g4SimHits = 9876
                 }
         }
 
 
         include "SimGeneral/HepPDTESSource/data/pdt.cfi"
-
 	source = FlatRandomEGunSource { 
-		untracked int32 maxEvents = 1
+		untracked int32 maxEvents = 10
 		untracked PSet PGunParameters = {
 			untracked vint32 PartID = {2212} 
-			untracked double MinEta = 9.67
-			untracked double MaxEta = 10.46
-			untracked double MinPhi = 0.0
-			untracked double MaxPhi = 6.28
+			untracked double MinEta = 8.5
+			untracked double MaxEta = 9.9
+			untracked double MinPhi = -3.14159265358979323846
+			untracked double MaxPhi = 3.14159265358979323846
 			untracked double MinE   = 7000.
 			untracked double MaxE   = 7000.
 		}
-		untracked int32 Verbosity = 1 # set to 1 (or greater)  for printouts
+		untracked int32 Verbosity = 0 # set to 1 (or greater)  for printouts
 	}
 
 
-	module VtxSmeared = VertexGenerator 
-	{
-		string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
-		double MeanX = -2.2    // in cm 
-		double MeanY = 0.      // in cm  
-		double MeanZ = -200.0  // in cm
-		double SigmaX = 0.0015
-		double SigmaY = 0.0015
-		double SigmaZ = 1.0  // in cm (as in COBRA/OSCAR)
-	}
+        module VtxSmeared = VertexGenerator
+        {
+                string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
+                double MeanX = -2.2    // in cm
+                double MeanY = 0.      // in cm
+                double MeanZ = -200.0  // in cm
+                double SigmaX = 0.0015
+                double SigmaY = 0.0015
+                double SigmaZ = 10.0  // in cm (as in COBRA/OSCAR)
+        }
 
-#	module VtxSmeared = VertexGenerator 
-#	{
-#		string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
-#		double MeanX = -22.    // in mm 
-#		double MeanY = 0.      // in mm  
-#		double MeanZ = -2000.  // in mm
-#		double SigmaX = 0.015
-#		double SigmaY = 0.015
-#		double SigmaZ = 10.0  // in mm (as in COBRA/OSCAR)
-#	}
-#
-#  module VtxSmeared = VertexGenerator
-#   {
-#      string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
-#      double MeanX = 0.
-#      double MeanY = 0.
-#      double MeanZ = 0.
-#      double SigmaX = 0.0015
-#      double SigmaY = 0.0015
-#      double SigmaZ = 5.3  // in cm (as in COBRA/OSCAR)
-#   }
-#
+#   	module VtxSmeared = VertexGenerator 
+#   	{
+#    		string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
+#    	 	double MeanX = -22.    // in mm 
+#    	 	double MeanY = 0.      // in mm  
+#    	 	double MeanZ = -2000.  // in mm
+#    	 	double SigmaX = 0.015
+#    	 	double SigmaY = 0.015
+#    	 	double SigmaZ = 10.0  // in mm (as in COBRA/OSCAR)
+#    	}
+#  
+###############################################
 #
 # Seeds start
         # Vtx Smearing
-       # include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
+#        include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
 
-#  include "SimG4Core/Application/data/SimG4Object.cfi"
 
 # Initialize magnetic field and XML
 	#Geometry
         include "SimG4CMS/FP420/test/data/FP420GeometryXML.cfi"
-#include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
+####include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
 
 	#Magnetic Field
-	include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
+#	include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
 # Seeds end
 #
+#  include "SimG4Core/Application/data/SimG4Object.cfi"
 #
-#
-        module o1 = PoolOutputModule {untracked string fileName ="simevent.root"} 
-        include "SimG4Core/Application/data/g4SimHits.cfi"
-        replace g4SimHits.UseMagneticField = false
-        replace g4SimHits.Physics.DefaultCutValue = 10.
-        replace g4SimHits.Generator.MinEtaCut =  9.5
-        replace g4SimHits.Generator.MaxEtaCut =  10.5
+###############################################
+        module o1 = PoolOutputModule {untracked string fileName ="simfp420event.root"} 
+
+#        include "SimG4Core/Application/data/g4SimHits.cfi"
+        include "SimG4CMS/FP420/test/data/SimG4Object.cfi"
+         replace g4SimHits.UseMagneticField = false
+         replace g4SimHits.Physics.DefaultCutValue = 10.
+          replace g4SimHits.Generator.ApplyPtCuts =  true
+          replace g4SimHits.Generator.ApplyPhiCuts =  true
+          replace g4SimHits.Generator.MinEtaCut =  8.4
+          replace g4SimHits.Generator.MaxEtaCut =  10.0
         replace g4SimHits.Watchers = {
-                        { string type            = "FP420Test"
+                    {    string type            = "FP420Test"
                         PSet FP420Test =
                         {
-                                int32 verbosity     = 0
-                                string FDataLabel =  "defaultData"
-                                string FOutputFile = "TheAnlysis.root"
-                                string FRecreateFile = "RECREATE"
-                        }}
+                                  int32 Verbosity     = 1
+                                  string FDataLabel =  "defaultData"
+                                  string FOutputFile = "TheAnlysis.root"
+                                  string FRecreateFile = "RECREATE"
+                        }
+ 
+ 		     }
         }
 	path p1 = { VtxSmeared, g4SimHits }
 	endpath outpath = { o1 }
@@ -122,3 +123,4 @@ process FP420Test  = {
 	service = Timing {}
 	service = Tracer {}
 }		
+###############################################
