*** empty log message ***

--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -3,6 +3,13 @@ process FP420Test  = {
 ### include "Configuration/ReleaseValidation/data/Services.cfi"
   ########## initialize  MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
+
+#   include "FWCore/MessageService/data/MessageLogger.cfi"
+#   replace MessageLogger.cout.threshold = "ERROR"
+#   replace MessageLogger.cerr.default.limit = 10
+
+
+
 #        service = MessageLogger
 #        { 
 #	        untracked vstring destinations = {"cout"}
@@ -27,15 +34,26 @@ process FP420Test  = {
 #				}
 #   	}
 
-        service = RandomNumberGeneratorService
-        {
-        untracked uint32 sourceSeed = 135799753
-        PSet moduleSeeds =
-                {
-                 untracked uint32 VtxSmeared = 123456789
-                 untracked uint32 g4SimHits = 9876
-                }
-        }
+   service = RandomNumberGeneratorService
+   {
+      untracked uint32 sourceSeed = 123456789
+      PSet moduleSeeds =
+      {
+         untracked uint32 VtxSmeared = 98765432
+	 untracked uint32 g4SimHits  = 11
+	 untracked uint32 mix        = 12345   
+      }
+   }
+
+#        service = RandomNumberGeneratorService
+#        {
+#        untracked uint32 sourceSeed = 135799753
+#        PSet moduleSeeds =
+#                {
+#                 untracked uint32 VtxSmeared = 123456789
+#                 untracked uint32 g4SimHits = 9876
+#                }
+#        }
 
 
         include "SimGeneral/HepPDTESSource/data/pdt.cfi"
@@ -54,6 +72,16 @@ process FP420Test  = {
 	}
 
 
+# Vertex smearing
+#
+# There're 3 types of Vertex smearing module (Gauss, Flat, BeamProfile);
+# the cff's are available for each one :
+# Configuration/StandardSequences/data/VtxSmearedGauss.cff
+# Configuration/StandardSequences/data/VtxSmearedNoSmear.cff
+# Configuration/StandardSequences/data/VtxSmearedFlat.cff
+# Configuration/StandardSequences/data/VtxSmearedBeamPreofile.cff
+# Currently, we suggest using Gaussian vertex smearing
+
         module VtxSmeared = VertexGenerator
         {
                 string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
@@ -67,7 +95,7 @@ process FP420Test  = {
 
 #   	module VtxSmeared = VertexGenerator 
 #   	{
-#    		string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
+#    	string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
 #    	 	double MeanX = -22.    // in mm 
 #    	 	double MeanY = 0.      // in mm  
 #    	 	double MeanZ = -2000.  // in mm
@@ -81,17 +109,31 @@ process FP420Test  = {
 # Seeds start
         # Vtx Smearing
 #        include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
+#include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
+#include "Configuration/StandardSequences/data/VtxSmearedNoSmear.cff"
+#include "Configuration/StandardSequences/data/VtxSmearedFlat.cff"
+#include "Configuration/StandardSequences/data/VtxSmearedBeamProfile.cff"
 
 
-# Initialize magnetic field and XML
+
+# Initialize geometry with XML files:
 	#Geometry
         include "SimG4CMS/FP420/test/data/FP420GeometryXML.cfi"
 ####include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
 
+# Initialize magnetic field: 
 	#Magnetic Field
 #	include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
+# You can set Mag Field to 0
+#
+#include "Configuration/StandardSequences/data/UseZeroBField.cff"
+
+
+
 # Seeds end
 #
+
+
 #  include "SimG4Core/Application/data/SimG4Object.cfi"
 #
 ###############################################
@@ -109,7 +151,7 @@ process FP420Test  = {
                     {    string type            = "FP420Test"
                         PSet FP420Test =
                         {
-                                  int32 Verbosity     = 1
+                                  int32 Verbosity     = 2
                                   string FDataLabel =  "defaultData"
                                   string FOutputFile = "TheAnlysis.root"
                                   string FRecreateFile = "RECREATE"
