Updateing xxxUtil.xml to the new convention of CaloTrkProcessing

--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -57,8 +57,8 @@ process FP420Test  = {
 
 
         include "SimGeneral/HepPDTESSource/data/pdt.cfi"
+        untracked PSet maxEvents = {untracked int32 input = 10}
 	source = FlatRandomEGunSource { 
-		untracked int32 maxEvents = 10
 		untracked PSet PGunParameters = {
 			untracked vint32 PartID = {2212} 
 			untracked double MinEta = 8.5
@@ -82,16 +82,13 @@ process FP420Test  = {
 # Configuration/StandardSequences/data/VtxSmearedBeamPreofile.cff
 # Currently, we suggest using Gaussian vertex smearing
 
-        module VtxSmeared = VertexGenerator
-        {
-                string type = "IOMC/EventVertexGenerators/GaussianEventVertexGenerator"
-                double MeanX = -2.2    // in cm
-                double MeanY = 0.      // in cm
-                double MeanZ = -200.0  // in cm
-                double SigmaX = 0.0015
-                double SigmaY = 0.0015
-                double SigmaZ = 10.0  // in cm (as in COBRA/OSCAR)
-        }
+	include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
+	replace VtxSmeared.MeanX = -2.2    // in cm
+	replace VtxSmeared.MeanY = 0.      // in cm
+	replace VtxSmeared.MeanZ = -200.0  // in cm
+	replace VtxSmeared.SigmaX = 0.0015
+	replace VtxSmeared.SigmaY = 0.0015
+	replace VtxSmeared.SigmaZ = 10.0  // in cm (as in COBRA/OSCAR)
 
 #   	module VtxSmeared = VertexGenerator 
 #   	{
