--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -61,10 +61,10 @@ process FP420Test  = {
 	source = FlatRandomEGunSource { 
 		untracked PSet PGunParameters = {
 			untracked vint32 PartID = {2212} 
-			untracked double MinEta = 8.5
-			untracked double MaxEta = 9.9
-			untracked double MinPhi = -3.14159265358979323846
-			untracked double MaxPhi = 3.14159265358979323846
+ 			untracked double MinEta = 8.7
+ 			untracked double MaxEta = 9.9
+			untracked double MinPhi = 3.053
+			untracked double MaxPhi = 3.227
 			untracked double MinE   = 7000.
 			untracked double MaxE   = 7000.
 		}
@@ -83,9 +83,9 @@ process FP420Test  = {
 # Currently, we suggest using Gaussian vertex smearing
 
 	include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
-	replace VtxSmeared.MeanX = -2.2    // in cm
-	replace VtxSmeared.MeanY = 0.      // in cm
-	replace VtxSmeared.MeanZ = -200.0  // in cm
+	replace VtxSmeared.MeanX = -1.5       // in cm
+	replace VtxSmeared.MeanY =  0.      // in cm
+	replace VtxSmeared.MeanZ = 41000.0  // in cm
 	replace VtxSmeared.SigmaX = 0.0015
 	replace VtxSmeared.SigmaY = 0.0015
 	replace VtxSmeared.SigmaZ = 10.0  // in cm (as in COBRA/OSCAR)
@@ -138,12 +138,14 @@ process FP420Test  = {
 
 #        include "SimG4Core/Application/data/g4SimHits.cfi"
         include "SimG4CMS/FP420/test/data/SimG4Object.cfi"
+###############################################
          replace g4SimHits.UseMagneticField = false
          replace g4SimHits.Physics.DefaultCutValue = 10.
           replace g4SimHits.Generator.ApplyPtCuts =  true
           replace g4SimHits.Generator.ApplyPhiCuts =  true
           replace g4SimHits.Generator.MinEtaCut =  8.4
           replace g4SimHits.Generator.MaxEtaCut =  10.0
+###############################################
         replace g4SimHits.Watchers = {
                     {    string type            = "FP420Test"
                         PSet FP420Test =
