--- a/test/data/run3DTest.cfg
+++ b/test/data/run3DTest.cfg
@@ -146,8 +146,13 @@ process FP4203DTest  = {
 
 # Initialize geometry with XML files:
 	#Geometry
-        include "Geometry/FP420CommonData/data/FP420GeometryXML.cfi"
+#      include "RecoRomanPot/RecoFP420/test/data/Test1GeometryXML.cfi"
+        include "SimG4CMS/FP420/test/data/FP420GeometryXML.cfi"
 
+
+
+###include "RecoRomanPot/RecoFP420/test/data/FP420GeometryXML.cfi"
+####include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
 
 # Initialize magnetic field: 
 	#Magnetic Field
