--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -1,38 +1,7 @@
 process FP420Test  = {
  ####### include services
-### include "Configuration/ReleaseValidation/data/Services.cfi"
-  ########## initialize  MessageLogger
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
 
-#   include "FWCore/MessageService/data/MessageLogger.cfi"
-#   replace MessageLogger.cout.threshold = "ERROR"
-#   replace MessageLogger.cerr.default.limit = 10
-
-
-
-#        service = MessageLogger
-#        { 
-#	        untracked vstring destinations = {"cout"}
-#		PSet cout = { PSet default = { int32 limit = 0 }}
-#
-#        }
-
-
-#	service = MessageLogger
-#	{
-#      	untracked vstring destinations = {"warning.txt","error.txt","info.txt","debugmessages.txt"}
-#
-#      	vstring categories = {  "FP420Sim" }
-#	vstring debugModules = { "*" }
-#	PSet error.txt         = {string threshold = "ERROR"  }
-#	PSet warning.txt       = {string threshold = "WARNING"}
-#	PSet info.txt          = {string threshold = "INFO"  }
-#      	PSet debugmessages.txt = {string threshold = "DEBUG"
-#				PSet INFO     = { int32 limit = 0 }
-#				PSet DEBUG    = { int32 limit = 0 }
-#				PSet FP420Sim = { int32 limit = 1000000 }
-#				}
-#   	}
 
    service = RandomNumberGeneratorService
    {
@@ -45,19 +14,10 @@ process FP420Test  = {
       }
    }
 
-#        service = RandomNumberGeneratorService
-#        {
-#        untracked uint32 sourceSeed = 135799753
-#        PSet moduleSeeds =
-#                {
-#                 untracked uint32 VtxSmeared = 123456789
-#                 untracked uint32 g4SimHits = 9876
-#                }
-#        }
-
+######################################################################
 
         include "SimGeneral/HepPDTESSource/data/pdt.cfi"
-        untracked PSet maxEvents = {untracked int32 input = 10}
+        untracked PSet maxEvents = {untracked int32 input = 100}
 	source = FlatRandomEGunSource { 
 		untracked PSet PGunParameters = {
 			untracked vint32 PartID = {2212} 
@@ -65,7 +25,7 @@ process FP420Test  = {
  			untracked double MaxEta = 9.9
 			untracked double MinPhi = 3.053
 			untracked double MaxPhi = 3.227
-			untracked double MinE   = 7000.
+			untracked double MinE   = 6930.
 			untracked double MaxE   = 7000.
 		}
 		untracked int32 Verbosity = 0 # set to 1 (or greater)  for printouts
@@ -101,22 +61,12 @@ process FP420Test  = {
 #    	 	double SigmaZ = 10.0  // in mm (as in COBRA/OSCAR)
 #    	}
 #  
-###############################################
-#
-# Seeds start
-        # Vtx Smearing
-#        include "IOMC/EventVertexGenerators/data/VtxSmearedGauss.cfi"
-#include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
-#include "Configuration/StandardSequences/data/VtxSmearedNoSmear.cff"
-#include "Configuration/StandardSequences/data/VtxSmearedFlat.cff"
-#include "Configuration/StandardSequences/data/VtxSmearedBeamProfile.cff"
-
 
 
 # Initialize geometry with XML files:
 	#Geometry
-        include "SimG4CMS/FP420/test/data/FP420GeometryXML.cfi"
-####include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
+#include "Geometry/FP420CommonData/data/cmsFP420GeometryXML.cfi"
+include "Geometry/FP420CommonData/data/FP420GeometryXML.cfi"
 
 # Initialize magnetic field: 
 	#Magnetic Field
@@ -135,16 +85,16 @@ process FP420Test  = {
 #
 ###############################################
         module o1 = PoolOutputModule {untracked string fileName ="simfp420event.root"} 
+#        module o1 = PoolOutputModule {untracked string fileName ="cmsfp420event.root"} 
 
-#        include "SimG4Core/Application/data/g4SimHits.cfi"
-        include "SimG4CMS/FP420/test/data/SimG4Object.cfi"
+        include "SimG4Core/Application/data/g4SimHits.cfi"
 ###############################################
+         replace g4SimHits.NonBeamEvent = true
          replace g4SimHits.UseMagneticField = false
-         replace g4SimHits.Physics.DefaultCutValue = 10.
-          replace g4SimHits.Generator.ApplyPtCuts =  true
+         replace g4SimHits.Physics.DefaultCutValue = 1000.
+          replace g4SimHits.Generator.ApplyPtCuts =  false
           replace g4SimHits.Generator.ApplyPhiCuts =  true
-          replace g4SimHits.Generator.MinEtaCut =  8.4
-          replace g4SimHits.Generator.MaxEtaCut =  10.0
+          replace g4SimHits.Generator.ApplyEtaCuts =  false
 ###############################################
         replace g4SimHits.Watchers = {
                     {    string type            = "FP420Test"
