*** empty log message ***

--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -89,9 +89,9 @@ include "Geometry/FP420CommonData/data/FP420GeometryXML.cfi"
 
         include "SimG4Core/Application/data/g4SimHits.cfi"
 ###############################################
-         replace g4SimHits.NonBeamEvent = true
+#         replace g4SimHits.NonBeamEvent = true
          replace g4SimHits.UseMagneticField = false
-         replace g4SimHits.Physics.DefaultCutValue = 1000.
+#         replace g4SimHits.Physics.DefaultCutValue = 1000.
           replace g4SimHits.Generator.ApplyPtCuts =  false
           replace g4SimHits.Generator.ApplyPhiCuts =  true
           replace g4SimHits.Generator.ApplyEtaCuts =  false
