--- a/test/data/runHecMB.cfg
+++ b/test/data/runHecMB.cfg
@@ -23,7 +23,7 @@ process HecFP420Test = {
       }
    }
 
-        untracked PSet maxEvents = {untracked int32 input = 1000}
+        untracked PSet maxEvents = {untracked int32 input = 100}
 ############################################################
 # Pythia event generator ; 
 # as an example producing minimum bias events see in runP-WithPythiaAndQGSP.cfg 
@@ -145,11 +145,12 @@ include "Geometry/FP420CommonData/data/FP420GeometryXML.cfi"
 # Seeds end
 #
 ###############################################   
-   include "SimTransport/HectorProducer/test/HectorProdVtxSmear.cfi"
+   include "SimTransport/HectorProducer/data/HectorTransport.cfi"
+#   include "SimTransport/HectorProducer/test/HectorProdVtxSmear.cfi"
 #   include "SimTransport/HectorProducer/test/HectorProdSelfSmear.cfi"
 #
-   replace LHCTransport.Hector.RP420f = 419
-   replace LHCTransport.Hector.RP420b = 419
+#   replace LHCTransport.Hector.RP420f = 419
+#   replace LHCTransport.Hector.RP420b = 419
 ###############################################   
 # Event output
 include "Configuration/EventContent/data/EventContent.cff"
@@ -165,9 +166,9 @@ include "Configuration/EventContent/data/EventContent.cff"
 ###############################################
        include "SimG4Core/Application/data/g4SimHits.cfi"
 ###############################################
-         replace g4SimHits.NonBeamEvent = true
+#         replace g4SimHits.NonBeamEvent = true
          replace g4SimHits.UseMagneticField = false
-         replace g4SimHits.Physics.DefaultCutValue = 1000.
+#         replace g4SimHits.Physics.DefaultCutValue = 1000.
           replace g4SimHits.Generator.ApplyPtCuts =  false
           replace g4SimHits.Generator.ApplyPhiCuts =  true
           replace g4SimHits.Generator.ApplyEtaCuts =  false
