--- a/test/data/runFP420.cfg
+++ b/test/data/runFP420.cfg
@@ -1,6 +1,15 @@
 process FP420Test  = {
  ####### include services
-  include "FWCore/MessageLogger/data/MessageLogger.cfi"
+##  include "FWCore/MessageLogger/data/MessageLogger.cfi"
+  service = MessageLogger {
+    untracked vstring destinations = { "cout" }
+    untracked PSet cout    = {
+      untracked string threshold = "INFO"
+      untracked bool noLineBreaks = true
+    }
+  }
+
+
 
 
    service = RandomNumberGeneratorService
@@ -92,7 +101,7 @@ include "Geometry/FP420CommonData/data/FP420GeometryXML.cfi"
 #         replace g4SimHits.NonBeamEvent = true
          replace g4SimHits.UseMagneticField = false
 #         replace g4SimHits.Physics.DefaultCutValue = 1000.
-          replace g4SimHits.Generator.ApplyPtCuts =  false
+#          replace g4SimHits.Generator.ApplyPCuts =  false
           replace g4SimHits.Generator.ApplyPhiCuts =  true
           replace g4SimHits.Generator.ApplyEtaCuts =  false
 ###############################################
