--- a/test/data/runHecMB.cfg
+++ b/test/data/runHecMB.cfg
@@ -3,10 +3,17 @@ process HecFP420Test = {
 ### include "Configuration/ReleaseValidation/data/Services.cfi"
 
   ########## initialize  MessageLogger
- # include "FWCore/MessageLogger/data/MessageLogger.cfi"
+ ## include "FWCore/MessageLogger/data/MessageLogger.cfi"
 
-   include "FWCore/MessageService/data/MessageLogger.cfi"
-   replace MessageLogger.cerr.default.limit = 10
+  # include "FWCore/MessageService/data/MessageLogger.cfi"
+  # replace MessageLogger.cerr.default.limit = 10
+  service = MessageLogger {
+    untracked vstring destinations = { "cout" }
+    untracked PSet cout    = {
+      untracked string threshold = "INFO"
+      untracked bool noLineBreaks = true
+    }
+  }
 
 
 
@@ -34,19 +41,21 @@ process HecFP420Test = {
 source = PythiaSource 
 { 
   untracked int32 pythiaPylistVerbosity = 0
-  untracked bool pythiaHepMCVerbosity = false
+  untracked bool  pythiaHepMCVerbosity = false
   untracked int32 maxEventsToPrint = 0
+
 
   PSet PythiaParameters = {
 
     # This is a vector of ParameterSet names to be read, in this order
-    # The first two are in the include files below
-    # The last one are simply my additional parameters
+    # The first one sets some defaults
+    # The second one are the user specific parameters
     vstring parameterSets = {
-      "pythiaDefault", 
       "pythiaMinBias", 
       "myParameters"
     }
+
+
 
     # Default (mostly empty - to keep PYTHIA default) card file
     # Name of the set is "pythiaDefault"
@@ -104,21 +113,22 @@ include "GeneratorInterface/Pythia6Interface/data/pythiaDefault.cff"
 #
 # There're 3 types of Vertex smearing module (Gauss, Flat, BeamProfile);
 # the cff's are available for each one :
-# Configuration/StandardSequences/data/VtxSmearedGauss.cff
+include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 # Configuration/StandardSequences/data/VtxSmearedNoSmear.cff
 # Configuration/StandardSequences/data/VtxSmearedFlat.cff
 # Configuration/StandardSequences/data/VtxSmearedBeamPreofile.cff
 # Currently, we suggest using Gaussian vertex smearing
 
-    module VtxSmeared = FlatEvtVtxGenerator
-    {
-       double MinX =  -0.10 // in cm 
-       double MaxX =   0.10 // in cm 
-       double MinY =  -0.1  // in cm 
-       double MaxY =  0.1   // in cm 
-       double MinZ = -10.  // in cm 
-       double MaxZ = 10.   // in cm 
-    }
+#    module VtxSmeared = FlatEvtVtxGenerator
+#    {
+#       double MinX =  -0.10 // in cm 
+#       double MaxX =   0.10 // in cm 
+#       double MinY =  -0.1  // in cm 
+#       double MaxY =  0.1   // in cm 
+#       double MinZ = -10.  // in cm 
+#       double MaxZ = 10.   // in cm 
+#    }
+
 #
 # for 2 tracks study:
 #      double MinZ = -2500.   // in cm 
@@ -169,7 +179,7 @@ include "Configuration/EventContent/data/EventContent.cff"
 #         replace g4SimHits.NonBeamEvent = true
          replace g4SimHits.UseMagneticField = false
 #         replace g4SimHits.Physics.DefaultCutValue = 1000.
-          replace g4SimHits.Generator.ApplyPtCuts =  false
+#          replace g4SimHits.Generator.ApplyPCuts =  false
           replace g4SimHits.Generator.ApplyPhiCuts =  true
           replace g4SimHits.Generator.ApplyEtaCuts =  false
           replace g4SimHits.Generator.HepMCProductLabel = "LHCTransport"
