--- a/test/data/runHecMB.cfg
+++ b/test/data/runHecMB.cfg
@@ -16,6 +16,8 @@ process HecFP420Test = {
   }
 
 
+###  IMPORTANT LINE BELOW:
+   include "SimGeneral/HepPDTESSource/data/pythiapdt.cfi"
 
 
    service = RandomNumberGeneratorService
@@ -176,11 +178,10 @@ include "Configuration/EventContent/data/EventContent.cff"
 ###############################################
        include "SimG4Core/Application/data/g4SimHits.cfi"
 ###############################################
-#         replace g4SimHits.NonBeamEvent = true
          replace g4SimHits.UseMagneticField = false
 #         replace g4SimHits.Physics.DefaultCutValue = 1000.
 #          replace g4SimHits.Generator.ApplyPCuts =  false
-          replace g4SimHits.Generator.ApplyPhiCuts =  true
+#          replace g4SimHits.Generator.ApplyPhiCuts =  true
           replace g4SimHits.Generator.ApplyEtaCuts =  false
           replace g4SimHits.Generator.HepMCProductLabel = "LHCTransport"
 ###############################################   
